2002-11-06  Jeremy Collins <jcollins@phpsource.net>

        * nsd/adpparse.c: Changed ParseAtts to make it compatible with
        how parsing works in 3.x.

2002-11-05  Jeremy Collins <jcollins@phpsource.net>

        * nsd/adpparse.c: Fixed a bug in Parse.  It was not parsing
        registered tags inside of html tags (ex. <td bgcolor='<tag n='v'>'> )

        * nsd/tclset.c: Fixed a bug with ns_set tcl commands.  
        ns_set idelkey|delkey would not actually delete the key.

2002-11-02  Jim Davidson <jgdavidson@aol.com>

	* nsd/fastpath.c:  Fixed bug with non-server specific cache names.

2002-11-01  Jeremy Collins <jcollins@phpsource.net>

        * nsd/adpparse.c: Fixed a small bug in ParseAtts.  It failed
        to properly parse attribute values with spaces in them.

2002-10-29  Jim Davidson <jgdavidson@aol.com>

	* sample-config.tcl:  Updated with examples for connection
	thread pools and Host header virtual servers.

	* Makefile:  Uses /bin/sh to invoke install-doc.

	* doc/install-doc:  Uses /bin/sh to invoke mkLinks.

	* nsd/form.c:
	* nsd/conn.c:
	* tcl/form.tcl:  Changed "ns_conn files" command to just
	return names of file upload widgets, moving access to other
	meta data to new fileoffset, filelength, and fileheaders
	subcommands. Also, removed the ns_conn string command
	instead of updating.

	* nsd/nsd.h:
	* nsd/driver.c:
	* nsd/nsmain.c:
	* nsd/server.c:
	* nsd/queue.c:  Implemented multiple named thread pools
	for virtual servers and Host header based virtual server
	selection.  See sample-config.tcl for config example.

	* nsd/info.c: Fixed crash bug with NULL server.

	* nsd/tclcmds.c: Removed NsTclConnCmd and NsTclServerCmd string commands.


2002-10-14  Jim Davidson <jgdavidson@aol.com>

	* doc/install-doc (new):  New script to install and cross
	link the man pages.

	* Makefile:
	* include/Makefile.module:  Added .PHONY targets and man
	page install target.

	* nsd/conn.c:  Made "ns_conn copy" use Tcl_Write instead