@@ -3,6 +3,8 @@
         * nsd/adpparse.c: Changed ParseAtts to make it compatible with
         how parsing works in 3.x.
 
+        * nsd/init.tcl: Fixed namespace bug.
+
 2002-11-05  Jeremy Collins <jcollins@phpsource.net>
 
         * nsd/adpparse.c: Fixed a bug in Parse.  It was not parsing
